fixes alignment

--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,7 @@
   color: aliceblue;
   font-weight: bold;
   margin: 20px 0px;
+  text-align: center;
 }
 .projects p {
   color: aliceblue;
