--- a/less/projects.less
+++ b/less/projects.less
@@ -31,6 +31,7 @@
     color: aliceblue;
     font-weight: bold;
     margin: 20px 0px;
+    text-align: center;
   }
   p {
     color: aliceblue;
